[gd_scene format=3 uid="uid://bnl2eka7ga6x7"]

[ext_resource type="Script" uid="uid://xmfewr6e2bnd" path="res://Scenes/misc/placement.gd" id="1_ec1er"]
[ext_resource type="Material" uid="uid://p2nkjd3ge3qm" path="res://Materials/Blue.tres" id="1_lgysx"]

[sub_resource type="BoxShape3D" id="BoxShape3D_lje5s"]
size = Vector3(1, 0.20062256, 1)

[node name="Placement" type="Area3D" unique_id=1862691038]
script = ExtResource("1_ec1er")

[node name="CollisionShape3D" type="CollisionShape3D" parent="." unique_id=702845606]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1065979, 0)
shape = SubResource("BoxShape3D_lje5s")

[node name="CSGBox3D" type="CSGBox3D" parent="." unique_id=669329066]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.113586426, -0.0044555664)
visible = false
material_override = ExtResource("1_lgysx")
size = Vector3(1, 0.21520996, 0.97546387)

[node name="ObjectPlaced" type="Marker3D" parent="." unique_id=985395488]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.017788023, 0.025157988)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
